chore: add docker-compose

--- a/compose/swapi-front/.eslintrc.json
+++ b/compose/swapi-front/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "effector"],
+  "plugins": ["@typescript-eslint"],
   "extends": ["next", "prettier"],
   "rules": { "padding-line-between-statements": ["error", { "blankLine": "always", "prev": "*", "next": "return" }] }
 }
