--- a/compose/swapi-front/Dockerfile
+++ b/compose/swapi-front/Dockerfile
@@ -6,7 +6,7 @@ COPY package.json .
 
 RUN npm install
 
-ENV PORT 3000
+ENV BASE_URL=http://localhost:80
 
 COPY . .
 
@@ -14,5 +14,5 @@ RUN npm run build
 
 EXPOSE $PORT
 
-CMD ["npm","run","start"]
+CMD ["npm","run","dev"]
 
