--- a/compose/swapi-front/package.json
+++ b/compose/swapi-front/package.json
@@ -24,10 +24,14 @@
     "classnames": "^2.3.2",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "9.0.0",
+    "autoprefixer": "^10.4.10",
+    "postcss": "^8.4.16",
+    "postcss-import": "^15.0.0",
     "husky": "8.0.3",
     "lint-staged": "14.0.1",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "^3.3.5",
     "typescript": "5.2.2"
   }
 }
